# fhtmx

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  justfile  package.json  pnpm-lock.yaml  release-please-config.json  tailwind.config.js
.github/workflows/: release-please.yml
actix-example/: Cargo.toml  bs-config.js  justfile  package.json
actix-example/src/: main.rs
axum-example/: .gitignore  Cargo.toml
axum-example/src/: main.rs
crates/fhtmx/: CHANGELOG.md  Cargo.toml  bacon.toml  bs-config.js  justfile  package.json  pnpm-lock.yaml
crates/fhtmx-actix/: CHANGELOG.md  Cargo.toml
crates/fhtmx-actix/src/: lib.rs  response.rs  sse.rs  utils.rs
crates/fhtmx-axum/: CHANGELOG.md  Cargo.toml
crates/fhtmx-axum/src/: lib.rs  response.rs  sse.rs  utils.rs
crates/fhtmx-daisy/: CHANGELOG.md  Cargo.toml  README.md
crates/fhtmx-daisy/src/: accordion.rs  avatar.rs  button.rs  dropdown.rs  fab.rs  lib.rs  macros.rs  modal.rs  swap.rs  utils.rs
crates/fhtmx-derive/: CHANGELOG.md  Cargo.toml
crates/fhtmx-derive/src/: lib.rs  utils.rs
crates/fhtmx/examples/: components.html  components.rs  daisy_form.html  daisy_form.rs  daisy_xtra.html  daisy_xtra.rs  daisyui.html  daisyui.rs  daisyui_form.rs.old  html_view.html  html_view.rs  html_view_table.html  html_view_table.rs  markdown.html  markdown.rs  simple.html  simple.rs  simple.rs.old
crates/fhtmx/src/: attribute.rs  element.rs  html.rs  html_element.rs  html_page.rs  html_page_old.rs  html_view.rs  htmx.rs  js.rs  js_old.rs  lib.rs  node.rs  render.rs  setup_components.js  setup_sse.js  sources.rs  svg.rs  typrose.css  url_query.rs  utils.rs
crates/fhtmx/src/components/: alerts.rs  callout_blocks.rs  container.rs  daisy.rs  daisy_colors.rs  daisy_xtra.rs  error.rs  form.rs  icons.rs  lazy_load.rs  markdown.rs  mod.rs  theme.rs  toast.rs
crates/fhtmx/src/components/error/: actix.rs  axum.rs  error.rs  mod.rs
crates/fhtmx/tests/: html_view.rs
examples/: daisyui_form.rs  simple.rs
examples_outputs/: bs-config.js  daisyui_form.html  package.json  pnpm-lock.yaml  simple.html
src/: elements.rs  html_page.rs  htmx.rs  lib.rs  svg.rs
src/snapshots/: fhtmx__elements__test__add_remove_class_works.snap  fhtmx__elements__test__render_multiple_inner.snap  fhtmx__elements__test__render_multiple_inner.snap.new  fhtmx__elements__test__render_simple.snap  fhtmx__elements__test__render_with_maybe_sets.snap  fhtmx__htmx__test__hx_attr_works.snap  fhtmx__htmx__test__hx_vals_works.snap  fhtmx__svg__test__svg_attrs_works.snap
