[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["actix-example", "axum-example"]

[workspace.dependencies]
insta = { version = "1.47", features = ["yaml", "redactions"] }
anyhow = { version = "1.0" }
actix-web = "4.13"
tracing = "0.1"
uuid = { version = "1.23", features = ["v4"] }
tokio = { version = "1.52", features = ["sync"] }
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
