[package]
name = "actix-example"
version = "0.1.0"
edition = "2024"

[dependencies]
fhtmx = { path = ".." }
anyhow = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"] }
actix-web = "4.10"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
