[package]
name = "actix-example"
version = "0.1.0"
edition = "2024"

[dependencies]
fhtmx = { path = "../crates/fhtmx", features = ["actix"] }
fhtmx-actix = { path = "../crates/fhtmx-actix" }
anyhow = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs"] }
actix-web = "4.13"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
uuid = { version = "1.23", features = ["v4"] }
actix-web-lab = "0.26"
