[package]
name = "fhtmx-actix"
version = "0.11.0"
authors = ["Renato Hermoza <rhermoza145@gmail.com>"]
description = "Actix utilities for fhtmx."
repository = "https://github.com/renato145/fhtmx"
documentation = "https://docs.rs/fhtmx-actix"
keywords = ["html", "htmx", "actix"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
fhtmx = { version = "0.30.0", path = "../fhtmx", features = ["actix"] }
uuid = { workspace = true, features = ["serde", "v4"] }
actix-web = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
actix-web-lab = "0.26"
futures = "0.3"
