[package]
name = "fhtmx-daisy"
version = "0.2.0"
authors = ["Renato Hermoza <rhermoza145@gmail.com>"]
description = "Create html using fhtmx and daisyUI."
documentation = "https://docs.rs/fhtmx-daisy"
keywords = ["html", "htmx", "tailwindcss", "daisyui"]
license = "MIT OR Apache-2.0"
edition = "2024"
# TODO: update
include = []
repository = "https://github.com/renato145/fhtmx"

[dependencies]
fhtmx = { path = "../fhtmx" }
indexmap = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
