[package]
name = "fhtmx-derive"
version = "0.5.0"
authors = ["Renato Hermoza <rhermoza145@gmail.com>"]
description = "Create html with rust with support for htmx."
repository = "https://github.com/renato145/fhtmx"
documentation = "https://docs.rs/fhtmx"
keywords = ["html", "htmx"]
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
darling = "0.23"
proc-macro2 = "1.0"
