[package]
name = "fhtmx"
version = "0.17.0"
authors = ["Renato Hermoza <rhermoza145@gmail.com>"]
description = "Create html with rust with support for htmx."
repository = "https://github.com/renato145/fhtmx"
documentation = "https://docs.rs/fhtmx"
keywords = ["html", "htmx"]
license = "MIT OR Apache-2.0"
edition = "2024"
# TODO: update
include = [
  "/src/**/*",
  "!/src/**/snapshots/*",
  "/LICENSE",
  "/README.md",
  "/CHANGELOG.md",
]

[features]
# default = ["anyhow"]
default = ["anyhow", "jiff_0_2"]
anyhow = ["dep:anyhow"]
chrono_0_4 = ["chrono"]
jiff_0_2 = ["jiff"]

[dependencies]
fhtmx-derive = { path = "../fhtmx-derive" }
indexmap = "2.13"
pastey = "0.2"
uuid = { version = "1.19", features = ["v4"] }
anyhow = { workspace = true, optional = true }
jiff = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
insta = { workspace = true }
lipsum = "0.9"
fake = { version = "4.4", features = ["derive"] }
googletest = "0.14"
