[package]
name = "fhtmx"
version = "0.28.0"
authors = ["Renato Hermoza <rhermoza145@gmail.com>"]
description = "Create html with rust with support for htmx."
repository = "https://github.com/renato145/fhtmx"
documentation = "https://docs.rs/fhtmx"
keywords = ["html", "htmx"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = ["examples", "justfile", "package.json", "pnpm-lock.yaml"]

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow"]
chrono_0_4 = ["chrono"]
jiff_0_2 = ["jiff"]
actix = ["actix-web", "tracing"]

[dependencies]
fhtmx-derive = { version = "0.6.0", path = "../fhtmx-derive" }
anyhow = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
jiff = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }
# axum-core = "0.5"
indexmap = "2.14"
pastey = "0.2"
pulldown-cmark = "0.13"
url = "2.5"

[dev-dependencies]
insta = { workspace = true }
lipsum = "0.9"
fake = { version = "5.1", features = ["derive"] }
googletest = "0.14"
